--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+      @apply text-xs sm:text-lg;
+      @apply font-mono;
+    }
+  
+    h1 {
+      @apply text-4xl sm:text-6xl;
+    }
+    h2 {
+      @apply text-2xl sm:text-3xl;
+    }
+    h3 {
+      @apply text-lg sm:text-xl;
+    }
+  }
