--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,15 @@
 
 @layer base {
   body {
-    @apply text-xs sm:text-lg;
+    @apply text-xs sm:text-base;
     @apply font-mono text-slate-800;
   }
 
   h1 {
-    @apply text-4xl sm:text-6xl;
+    @apply text-4xl sm:text-5xl;
   }
   h2 {
-    @apply text-2xl sm:text-3xl;
+    @apply text-xl sm:text-2xl;
   }
   h3 {
     @apply text-lg sm:text-xl;
