--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,10 @@
     @apply px-5 py-2 bg-slate-100 rounded-md;
     @apply hover:scale-110 transition-all active:scale-95;
   }
+
+  .input-primary-slate {
+    @apply rounded-md border border-slate-300 px-3 py-2;
+    @apply focus:outline-none focus:border-teal-500 focus:z-10;
+    @apply focus:border-2;
+  }
 }
